--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 </li>
 <li><p>Face Recognition</p>
 <ul>
-<li><p>Methods: DeepFace, DeepID, DeepID2, FaceNet || Center Loss, SphereFace, CosFace, ArcFace</p>
+<li><p>Methods: DeepFace, DeepID, DeepID2, FaceNet || <a href="https://ydwen.github.io/papers/WenECCV16.pdf">Center Loss</a>, <a href="https://arxiv.org/abs/1704.08063">SphereFace</a>, <a href="https://arxiv.org/abs/1801.09414">CosFace</a>, <a href="https://arxiv.org/abs/1801.07698">ArcFace</a></p>
 </li>
-<li><p>Datasets: CASIA-Webface, VGGFace2 || LFW</p>
+<li><p>Datasets: CASIA-Webface, <a href="http://www.robots.ox.ac.uk/~vgg/data/vgg_face2/">VGGFace2</a> || LFW</p>
 </li>
 </ul>
 
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-24 18:56:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-24 19:03:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
