--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <ul>
 <li><p>Methods: DeepFace, DeepID, DeepID2, FaceNet || <a href="https://ydwen.github.io/papers/WenECCV16.pdf">Center Loss</a>, <a href="https://arxiv.org/abs/1704.08063">SphereFace</a>, <a href="https://arxiv.org/abs/1801.09414">CosFace</a>, <a href="https://arxiv.org/abs/1801.07698">ArcFace</a></p>
 </li>
-<li><p>Datasets: CASIA-Webface, <a href="http://www.robots.ox.ac.uk/~vgg/data/vgg_face2/">VGGFace2</a> || LFW</p>
+<li><p>Datasets: CASIA-Webface, <a href="http://www.robots.ox.ac.uk/~vgg/data/vgg_face2/">VGGFace2</a>, <a href="https://megapixels.cc/msceleb/">MS-Celeb-1M</a>, <a href="http://megaface.cs.washington.edu/">MegaFace</a> || LFW, <a href="https://ibug.doc.ic.ac.uk/resources/agedb/">AgeDB</a>, <a href="http://www.cfpw.io/">CFP</a></p>
 </li>
 </ul>
 
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-24 19:03:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-24 19:10:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
