--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <tr class="r14"><td class="c1">Lecture 9 </td><td class="c2"> 2/17 </td><td class="c3"> Face Alignment, part II  </td><td class="c4"> <a href="https://drive.google.com/file/d/1xP7QG6UPwmvmO_m5265qERe9hIAolaxU/view?usp=sharing">Slides</a> <br /> <a href="https://link.springer.com/article/10.1007/s11263-018-1134-y">Menpo Benchmark</a>  </td></tr>
 <tr class="r15"><td class="c1">Discussion </td><td class="c2"> 2/19 </td><td class="c3"> Face Alignment (Jun Guo) <br /> <font color="DarkMagenta">Homework 4 due</font> </td><td class="c4">  </td></tr>
 <tr class="r16"><td class="c1">Lecture 10 </td><td class="c2"> 2/24 </td><td class="c3"> Face Recognition, part I <br /> <font color="DarkMagenta">Homework 5 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1d8T-ucLoMSxliT7w7ekqzBJokWTUG9I4/view?usp=sharing">Slides</a> <br /> <a href="homework/HW5.pdf">Homework 5</a></td></tr>
-<tr class="r17"><td class="c1">Lecture 11 </td><td class="c2"> 2/26 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4">  </td></tr>
+<tr class="r17"><td class="c1">Lecture 11 </td><td class="c2"> 2/26 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4"> <a href="https://drive.google.com/file/d/1T0iwlIJQoLE6zOlL4BWtDNcnyyGVEMVo/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
 <tr class="r19"><td class="c1">Spring Break </td><td class="c2"> 3/4 </td><td class="c3"> No Class <br /> </td><td class="c4">  </td></tr>
 <tr class="r20"><td class="c1">Discussion  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition <br /> <font color="DarkMagenta">Homework 5 due</font></td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-24 19:11:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-27 11:33:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
