--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <tr class="r17"><td class="c1">Lecture 11 </td><td class="c2"> 2/26 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4"> <a href="https://drive.google.com/file/d/1T0iwlIJQoLE6zOlL4BWtDNcnyyGVEMVo/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
 <tr class="r19"><td class="c1">Spring Break </td><td class="c2"> 3/4 </td><td class="c3"> No Class <br /> </td><td class="c4">  </td></tr>
-<tr class="r20"><td class="c1">Discussion  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition <br /> <font color="DarkMagenta">Homework 5 due</font></td><td class="c4">  </td></tr>
-<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition <br /> <font color="DarkMagenta">Final Project Proposal out</font></td><td class="c4">  </td></tr>
+<tr class="r20"><td class="c1">Discussion  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition (Shengjie Zhu) <br /> <font color="DarkMagenta">Homework 5 due</font></td><td class="c4">  </td></tr>
+<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition (Honglin Bao) <br /> <font color="DarkMagenta">Final Project Proposal out</font></td><td class="c4">  </td></tr>
 <tr class="r22"><td class="c1">Lecture 12 </td><td class="c2"> 3/16 </td><td class="c3"> Face Presentation Attack Detection, part I <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
 <tr class="r23"><td class="c1">Lecture 13 </td><td class="c2"> 3/18 </td><td class="c3"> Face Presentation Attack Detection, part II </td><td class="c4">  </td></tr>
 <tr class="r24"><td class="c1">Discussion </td><td class="c2"> 3/23 </td><td class="c3"> Face PAD <br /> <font color="DarkMagenta">Homework 6 due</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-27 11:33:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-11 12:49:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
