--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <tr class="r20"><td class="c1">Discussion  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition (Shengjie Zhu) <br /> <font color="DarkMagenta">Homework 5 due</font></td><td class="c4">  </td></tr>
 <tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition (Honglin Bao) <br /> <font color="DarkMagenta">Final Project Proposal out</font></td><td class="c4">  </td></tr>
 <tr class="r22"><td class="c1">Lecture 12 </td><td class="c2"> 3/16 </td><td class="c3"> Face Presentation Attack Detection, part I <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1Y1TSBWgQCYSMOH612ulJ1jS3kEehJEcc/view?usp=sharing">Slides</a> <br /> <a href="homework/HW6.pdf">Homework 6</a> </td></tr>
-<tr class="r23"><td class="c1">Lecture 13 </td><td class="c2"> 3/18 </td><td class="c3"> Face Presentation Attack Detection, part II </td><td class="c4">  </td></tr>
+<tr class="r23"><td class="c1">Lecture 13 </td><td class="c2"> 3/18 </td><td class="c3"> Face Presentation Attack Detection, part II </td><td class="c4"> <a href="https://drive.google.com/file/d/1MFb241gBb34jStbSNlYkIK3C6YVtbRrM/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r24"><td class="c1">Discussion </td><td class="c2"> 3/23 </td><td class="c3"> Face PAD <br /> <font color="DarkMagenta">Homework 6 due</font> </td><td class="c4">  </td></tr>
 <tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> (Guest Lecture by Joshua Engelsma) <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">   </td></tr>
 <tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> (Guest Lecture by Joshua Engelsma) </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-16 22:29:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-19 13:37:23 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
