--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> (Guest Lecture by Joshua Engelsma) <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">   </td></tr>
 <tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> (Guest Lecture by Joshua Engelsma) </td><td class="c4">  </td></tr>
 <tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Fingerprint <br /> <font color="DarkMagenta">Homework 7 due</font></td><td class="c4">  </td></tr>
-<tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3">Iris Recognition <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
-<tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris PAD </td><td class="c4">  </td></tr>
+<tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> (Guest Lecture by Dr. Antitza Dantcheva) <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
+<tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris Recognition and PAD </td><td class="c4">  </td></tr>
 <tr class="r30"><td class="c1">Discussion  </td><td class="c2"> 4/13 </td><td class="c3"> Iris <br /> <font color="DarkMagenta">Homework 8 due</font> </td><td class="c4">  </td></tr>
 <tr class="r31"><td class="c1">Final Presentation </td><td class="c2"> 4/15 </td><td class="c3"> <font color="DarkMagenta">Final Project Report due</font> </td><td class="c4">  </td></tr>
 <tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3">  </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-19 13:58:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-23 10:41:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
