--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 <tr class="r22"><td class="c1">Lecture 12 </td><td class="c2"> 3/16 </td><td class="c3"> Face Presentation Attack Detection, part I <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1Y1TSBWgQCYSMOH612ulJ1jS3kEehJEcc/view?usp=sharing">Slides</a> <br /> <a href="homework/HW6.pdf">Homework 6</a> <br /> <a href="https://arxiv.org/abs/1908.10654">CASIA-SURF</a> <br /> <a href="https://arxiv.org/abs/2003.05136">CASIA-SURF CeFA</a></td></tr>
 <tr class="r23"><td class="c1">Lecture 13 </td><td class="c2"> 3/18 </td><td class="c3"> Face Presentation Attack Detection, part II </td><td class="c4"> <a href="https://drive.google.com/file/d/1MFb241gBb34jStbSNlYkIK3C6YVtbRrM/view?usp=sharing">Slides</a> <br /> <a href="http://openaccess.thecvf.com/content_CVPRW_2019/papers/CFS/Liu_Multi-Modal_Face_Anti-Spoofing_Attack_Detection_Challenge_at_CVPR2019_CVPRW_2019_paper.pdf">Anti-spoofing @CVPR2019</a> <br /> Anti-spoofing @CVPR2020</td></tr>
 <tr class="r24"><td class="c1">Discussion </td><td class="c2"> 3/23 </td><td class="c3"> Face PAD (Andrew Hou) <br /> <font color="DarkMagenta">Homework 6 due</font> </td><td class="c4">  </td></tr>
-<tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> (Guest Lecture by Joshua Engelsma) <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/12jzJ8A1YiAdd79ThSzGXtq0u_Dw-QHD9/view?usp=sharing">Slides</a> <br /> <a href="homework/HW7.pdf">Homework 7</a> </td></tr>
-<tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> (Guest Lecture by Joshua Engelsma) </td><td class="c4">  </td></tr>
+<tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/12jzJ8A1YiAdd79ThSzGXtq0u_Dw-QHD9/view?usp=sharing">Slides</a> <br /> <a href="homework/HW7.pdf">Homework 7</a> </td></tr>
+<tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> </td><td class="c4">  </td></tr>
 <tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Fingerprint <br /> <font color="DarkMagenta">Homework 7 due</font></td><td class="c4">  </td></tr>
-<tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> (Guest Lecture by Dr. Antitza Dantcheva) <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
+<tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> <font color="mediumseagreen">Guest Lecture by Dr. Antitza Dantcheva, INRIA</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
 <tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris Recognition and PAD </td><td class="c4">  </td></tr>
-<tr class="r30"><td class="c1">Discussion  </td><td class="c2"> 4/13 </td><td class="c3"> Iris <br /> <font color="DarkMagenta">Homework 8 due</font> </td><td class="c4">  </td></tr>
-<tr class="r31"><td class="c1">Final Presentation </td><td class="c2"> 4/15 </td><td class="c3"> <font color="DarkMagenta">Final Project Report due</font> </td><td class="c4">  </td></tr>
-<tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3">  </td><td class="c4">  </td></tr>
+<tr class="r30"><td class="c1">Lecture 18  </td><td class="c2"> 4/13 </td><td class="c3"> Iris <br /> <font color="DarkMagenta">Homework 8 due</font> </td><td class="c4">  </td></tr>
+<tr class="r31"><td class="c1">Lecture 19 </td><td class="c2"> 4/15 </td><td class="c3"> Cross-spectral Face Recognition <br /> <font color="mediumseagreen">Guest Lecture by Dr. Benjamin Riggan, UNL</font> </td><td class="c4">  </td></tr>
+<tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3"> <font color="DarkMagenta">Final Project Report due</font>  </td><td class="c4">  </td></tr>
 <tr class="r33"><td class="c1">Final Presentation </td><td class="c2"> 4/22 </td><td class="c3">  </td><td class="c4">  </td></tr>
 <tr class="r34"><td class="c1">Final Presentation </td><td class="c2"> 4/27 </td><td class="c3">  </td><td class="c4">  </td></tr>
 <tr class="r35"><td class="c1">Final Presentation </td><td class="c2"> 4/29 </td><td class="c3">  </td><td class="c4">  
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-27 11:08:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-28 10:19:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
