--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/12jzJ8A1YiAdd79ThSzGXtq0u_Dw-QHD9/view?usp=sharing">Slides</a> <br /> <a href="homework/HW7.pdf">Homework 7</a> </td></tr>
 <tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> </td><td class="c4">  </td></tr>
 <tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Fingerprint <br /> <font color="DarkMagenta">Homework 7 due</font></td><td class="c4">  </td></tr>
-<tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> <font color="mediumseagreen">Guest Lecture by Dr. Antitza Dantcheva, INRIA</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
+<tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> <font color="mediumseagreen">Guest Lecture by Dr. Antitza Dantcheva, INRIA</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4"> <a href="https://github.com/EndlessSora/DeeperForensics-1.0">DeeperForensics-1.0</a>  </td></tr>
 <tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris Recognition and PAD </td><td class="c4">  </td></tr>
 <tr class="r30"><td class="c1">Lecture 18  </td><td class="c2"> 4/13 </td><td class="c3"> Iris <br /> <font color="DarkMagenta">Homework 8 due</font> </td><td class="c4">  </td></tr>
 <tr class="r31"><td class="c1">Lecture 19 </td><td class="c2"> 4/15 </td><td class="c3"> Cross-spectral Face Recognition <br /> <font color="mediumseagreen">Guest Lecture by Dr. Benjamin Riggan, UNL</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-28 10:19:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-28 10:27:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
