--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> <font color="mediumseagreen">Guest Lecture by Dr. Antitza Dantcheva, INRIA</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4"> <a href="https://github.com/EndlessSora/DeeperForensics-1.0">DeeperForensics-1.0</a>  </td></tr>
 <tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris Recognition and PAD </td><td class="c4">  </td></tr>
 <tr class="r30"><td class="c1">Lecture 18  </td><td class="c2"> 4/13 </td><td class="c3"> Iris <br /> <font color="DarkMagenta">Homework 8 due</font> </td><td class="c4">  </td></tr>
-<tr class="r31"><td class="c1">Lecture 19 </td><td class="c2"> 4/15 </td><td class="c3"> Cross-spectral Face Recognition <br /> <font color="mediumseagreen">Guest Lecture by Dr. Benjamin Riggan, UNL</font> </td><td class="c4">  </td></tr>
+<tr class="r31"><td class="c1">Lecture 19 </td><td class="c2"> 4/15 </td><td class="c3"> Cross-spectral Face Recognition <br /> <font color="mediumseagreen">Guest Lecture by Dr. Benjamin Riggan, UNL</font> </td><td class="c4"> <a href="https://arxiv.org/pdf/1812.05155.pdf">Polarimetric Thermal</a> </td></tr>
 <tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3"> <font color="DarkMagenta">Final Project Report due</font>  </td><td class="c4">  </td></tr>
 <tr class="r33"><td class="c1">Final Presentation </td><td class="c2"> 4/22 </td><td class="c3">  </td><td class="c4">  </td></tr>
 <tr class="r34"><td class="c1">Final Presentation </td><td class="c2"> 4/27 </td><td class="c3">  </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-28 10:27:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-28 10:32:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
