--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <tr class="r23"><td class="c1">Lecture 13 </td><td class="c2"> 3/18 </td><td class="c3"> Face Presentation Attack Detection, part II </td><td class="c4"> <a href="https://drive.google.com/file/d/1MFb241gBb34jStbSNlYkIK3C6YVtbRrM/view?usp=sharing">Slides</a> <br /> <a href="http://openaccess.thecvf.com/content_CVPRW_2019/papers/CFS/Liu_Multi-Modal_Face_Anti-Spoofing_Attack_Detection_Challenge_at_CVPR2019_CVPRW_2019_paper.pdf">Anti-spoofing @CVPR2019</a> <br /> Anti-spoofing @CVPR2020</td></tr>
 <tr class="r24"><td class="c1">Discussion </td><td class="c2"> 3/23 </td><td class="c3"> Face PAD (Andrew Hou) <br /> <font color="DarkMagenta">Homework 6 due</font> </td><td class="c4">  </td></tr>
 <tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/12jzJ8A1YiAdd79ThSzGXtq0u_Dw-QHD9/view?usp=sharing">Slides</a> <br /> <a href="homework/HW7.pdf">Homework 7</a> </td></tr>
-<tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> </td><td class="c4">  </td></tr>
+<tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD <br /> <font color="mediumseagreen">Guest Lecture by Joshua Engelsma</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1Fau4RHLFqzjzD3SgwnE_HAAJ_MCLGrgf/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Fingerprint <br /> <font color="DarkMagenta">Homework 7 due</font></td><td class="c4">  </td></tr>
 <tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3"> Deepfakes <br /> <font color="mediumseagreen">Guest Lecture by Dr. Antitza Dantcheva, INRIA</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4"> <a href="https://github.com/EndlessSora/DeeperForensics-1.0">DeeperForensics-1.0</a>  </td></tr>
 <tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris Recognition and PAD </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-28 10:32:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-30 17:09:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
