--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 </li>
 <li><p>Face Alignment</p>
 <ul>
-<li><p>Methods: <a href="https://arxiv.org/pdf/1604.02878.pdf">MTCNN</a>, <a href="https://arxiv.org/abs/1902.10859">PFLD</a>, <a href="https://arxiv.org/abs/1711.06753">Wing Loss</a> || <a href="https://arxiv.org/pdf/1603.06937.pdf">Hourglass</a>, <a href="https://www.adrianbulat.com/face-alignment">FAN</a>, <a href="https://arxiv.org/abs/1812.01936">U-Net</a>, <a href="https://arxiv.org/abs/1908.07919">HRNet</a>, <a href="https://arxiv.org/abs/1805.10483">LAB</a>, <a href="https://arxiv.org/pdf/1803.04108.pdf">SAN</a></p>
+<li><p>Methods: <a href="https://arxiv.org/pdf/1604.02878.pdf">MTCNN</a>, <a href="https://arxiv.org/abs/1902.10859">PFLD</a>, <a href="https://arxiv.org/abs/1711.06753">Wing Loss</a> || <a href="https://arxiv.org/pdf/1603.06937.pdf">Hourglass</a>, <a href="https://www.adrianbulat.com/face-alignment">FAN</a>, <a href="https://arxiv.org/abs/1812.01936">U-Net</a>, <a href="https://arxiv.org/abs/1908.07919">HRNet</a>, <a href="https://arxiv.org/abs/1805.10483">LAB</a>, <a href="https://arxiv.org/pdf/1803.04108.pdf">SAN</a>, <a href="https://arxiv.org/abs/2004.02980">LUVLi</a></p>
 </li>
 <li><p>Datasets: <a href="https://ibug.doc.ic.ac.uk/resources/300-W/">300W</a>, <a href="https://ibug.doc.ic.ac.uk/resources/2nd-facial-landmark-tracking-competition-menpo-ben/">Menpo</a>, <a href="https://ibug.doc.ic.ac.uk/resources/300-VW/">300-VW</a>, <a href="https://www.tugraz.at/institute/icg/research/team-bischof/lrs/downloads/aflw/">AFLW</a>, <a href="https://wywu.github.io/projects/LAB/WFLW.html">WFLW</a></p>
 </li></ul>
 </li>
 <li><p>Face Recognition</p>
 <ul>
-<li><p>Methods: DeepFace, DeepID, DeepID2, FaceNet || <a href="https://ydwen.github.io/papers/WenECCV16.pdf">Center Loss</a>, <a href="https://arxiv.org/abs/1704.08063">SphereFace</a>, <a href="https://arxiv.org/abs/1801.09414">CosFace</a>, <a href="https://arxiv.org/abs/1801.07698">ArcFace</a></p>
+<li><p>Methods: DeepFace, DeepID, DeepID2, FaceNet || <a href="https://ydwen.github.io/papers/WenECCV16.pdf">Center Loss</a>, <a href="https://arxiv.org/abs/1704.08063">SphereFace</a>, <a href="https://arxiv.org/abs/1801.09414">CosFace</a>, <a href="https://arxiv.org/abs/1801.07698">ArcFace</a>, <a href="https://arxiv.org/abs/2004.00288">CurricularFace</a></p>
 </li>
 <li><p>Datasets: CASIA-Webface, <a href="http://www.robots.ox.ac.uk/~vgg/data/vgg_face2/">VGGFace2</a>, <a href="https://megapixels.cc/msceleb/">MS-Celeb-1M</a>, <a href="http://megaface.cs.washington.edu/">MegaFace</a> || <a href="http://vis-www.cs.umass.edu/lfw/">LFW</a>, <a href="https://ibug.doc.ic.ac.uk/resources/agedb/">AgeDB</a>, <a href="http://www.cfpw.io/">CFP</a></p>
 </li>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-13 23:23:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-04-13 23:30:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
