--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
 <tr class="r29"><td class="c1">Discussion </td><td class="c2"> 4/8 </td><td class="c3"> 3D Face Alignment (Ynsheng Masa Hu) </td><td class="c4">  </td></tr>
 <tr class="r30"><td class="c1">Lecture 18  </td><td class="c2"> 4/13 </td><td class="c3"> Iris <br /> <font color="DarkMagenta">Homework 8 due</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1sRDMA-c_zRbqGhUI7W2y77_j9TTX-4j3/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r31"><td class="c1">Lecture 19 </td><td class="c2"> 4/15 </td><td class="c3"> Cross-spectral Face Recognition <br /> <font color="mediumseagreen">Guest Lecture by Dr. Benjamin Riggan, UNL</font> </td><td class="c4"> <a href="https://arxiv.org/pdf/1812.05155.pdf">Polarimetric Thermal</a> </td></tr>
-<tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3"> <font color="DarkMagenta">Final Project Report due</font>  </td><td class="c4">  </td></tr>
-<tr class="r33"><td class="c1">Final Presentation </td><td class="c2"> 4/22 </td><td class="c3">  </td><td class="c4">  </td></tr>
-<tr class="r34"><td class="c1">Final Presentation </td><td class="c2"> 4/27 </td><td class="c3">  </td><td class="c4">  </td></tr>
-<tr class="r35"><td class="c1">Final Presentation </td><td class="c2"> 4/29 </td><td class="c3">  </td><td class="c4">  
+<tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/29 </td><td class="c3"> <font color="DarkMagenta">Final Project Report due</font>  </td><td class="c4">  </td></tr>
+<tr class="r33"><td class="c1">
 </td></tr></table>
 <h2>References:</h2>
 <ul>
@@ -97,7 +95,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-13 23:37:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-04 11:47:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
