--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <tr class="r11"><td class="c1">Lecture 7 </td><td class="c2"> 2/5 </td><td class="c3"> Face Detection, part II </td><td class="c4"> <a href="https://drive.google.com/file/d/1Fc4HVmcPI5spMCqQXlLTcaTdqrjaOc3c/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r12"><td class="c1">Discussion </td><td class="c2"> 2/10 </td><td class="c3"> Face Detection (Madison Bowden) <br /> <font color="DarkMagenta">Homework 3 due</font> </td><td class="c4">   </td></tr>
 <tr class="r13"><td class="c1">Lecture 8 </td><td class="c2"> 2/12 </td><td class="c3"> Face Alignment, part I  <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1EUaRoze842z934M-Ko5FuBC4qZoI-UNY/view?usp=sharing">Slides</a> <br /> <a href="homework/HW4.pdf">Homework 4</a> </td></tr>
-<tr class="r14"><td class="c1">Lecture 9 </td><td class="c2"> 2/17 </td><td class="c3"> Face Alignment, part II  </td><td class="c4"> <a href="https://drive.google.com/file/d/1xP7QG6UPwmvmO_m5265qERe9hIAolaxU/view?usp=sharing">Slides</a> <br /> <a href="https://link.springer.com/article/10.1007/s11263-018-1134-y">Menpo Benchmark</a>  </td></tr>
+<tr class="r14"><td class="c1">Lecture 9 </td><td class="c2"> 2/17 </td><td class="c3"> Face Alignment, part II  </td><td class="c4"> <a href="https://drive.google.com/file/d/1xP7QG6UPwmvmO_m5265qERe9hIAolaxU/view?usp=sharing">Slides</a> <br /> <a href="https://link.springer.com/article/10.1007/s11263-018-1134-y">Menpo Benchmark</a> <br /> <a href="https://github.com/cunjian/pytorch_face_landmark">Pytorch_Face_Landmark</a> </td></tr>
 <tr class="r15"><td class="c1">Discussion </td><td class="c2"> 2/19 </td><td class="c3"> Face Alignment (Jun Guo) <br /> <font color="DarkMagenta">Homework 4 due</font> </td><td class="c4">  </td></tr>
 <tr class="r16"><td class="c1">Lecture 10 </td><td class="c2"> 2/24 </td><td class="c3"> Face Recognition, part I <br /> <font color="DarkMagenta">Homework 5 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1d8T-ucLoMSxliT7w7ekqzBJokWTUG9I4/view?usp=sharing">Slides</a> <br /> <a href="homework/HW5.pdf">Homework 5</a></td></tr>
 <tr class="r17"><td class="c1">Lecture 11 </td><td class="c2"> 2/26 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4"> <a href="https://drive.google.com/file/d/1T0iwlIJQoLE6zOlL4BWtDNcnyyGVEMVo/view?usp=sharing">Slides</a> </td></tr>
@@ -94,7 +94,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-04 11:52:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-04 12:31:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
